Fix layout of elements in index page for cleaner layout on smaller screen sizes

--- a/css/style.css
+++ b/css/style.css
@@ -511,8 +511,11 @@ ul > li:last-child {
 
 
 .project-container {
-  height: 100vh;
-  margin: 0 3em;
+  margin: 3em;
+}
+
+.project-grid {
+  padding-top: 3em;
 }
 
 .project-description {
@@ -781,6 +784,7 @@ iframe {
 
 
   .project-container {
+    height: 100vh;
     width: 60%;
     margin: 0 auto;
   }
@@ -792,6 +796,10 @@ iframe {
     justify-items: start;
     align-items: center;
     padding-top: 15em;
+  }
+
+  .project-description {
+    padding-right: 2em;
   }
 
   .project-picture {
